namespace Domain;

public class Action
{
    
}