namespace Domain;

public enum ActionType
{
    Entry,
    Do,
    Exit,
    Transition
}