namespace Domain;

public class CompoundState
{
    
}