namespace Domain;

public class FinalState
{
}