namespace Domain;

public class Guard
{
    
}