namespace Domain;

public class InitialState
{
    
}