namespace Domain;

public class SimpleState
{
    
}