namespace Domain;

public abstract class StateComponent
{
}