namespace Domain;

public class StateMachine
{
    
}