namespace Domain;

public class Transition
{
    
}