namespace Domain;

public class Trigger
{
    
}