namespace Parser;

public enum StateType
{
    Initial,
    Simple,
    Compound,
    Final
}