namespace Presentation;

public class ConsoleUi
{
}