namespace Validation;

public class CompoundTargetValidator
{
    
}