namespace Validation;

public interface IValidationStrategy
{
    
}