namespace Validation;

public class InitialFinalValidator
{
    
}