namespace Validation;

public class ValidationError
{
    
}