@startuml DPAT-1-Femke-Bas-Domain

' Compact class diagram: focus on structure, patterns and key dependencies.
skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 25
skinparam ranksep 25
hide circle
hide empty members

package "Domain\nComposite" as Domain {
    abstract class StateComponent {
        +Identifier : string
        +Name : string
        +Parent : CompoundState
        +Accept(visitor)
    }

    class SimpleState
    class CompoundState {
        +Children : IReadOnlyList<StateComponent>
        +AddChild(child : StateComponent)
        +RemoveChild(child : StateComponent)
    }
    class InitialState
    class FinalState

    class StateMachine {
        +Name : string
        +RootStates : IReadOnlyList<StateComponent>
        +Transitions : IReadOnlyList<Transition>
        +Accept(visitor)
    }

    class Transition {
        +Identifier : string
        +Source : StateComponent
        +Destination : StateComponent
        +Trigger : Trigger
        +Guard : Guard
        +Effect : Action
        +Accept(visitor)
    }

    class Trigger
    class Guard
    class Action
    enum ActionType

    StateComponent <|--- SimpleState
    StateComponent <|---- CompoundState
    StateComponent <|--- InitialState
    StateComponent <|--- FinalState

    CompoundState "1" o-------- "*" StateComponent : children
    StateMachine "1" o--- "*" StateComponent : root states
    StateMachine "1" o--- "*" Transition
    StateMachine "1" o--- "*" Trigger

    Transition "*" ---> "1" StateComponent : source/destination
    Transition "*" ---> "0..1" Trigger
    Transition "*" ---> "0..1" Guard
    Transition "*" ---> "0..1" Action : effect
    Action ...> ActionType
}

note top of Domain
  <b>Composite Pattern</b>
  StateComponent is de basis.
  Simple, Initial en Final zijn leaves.
  CompoundState bevat child states.
end note

package "Parsing\nBuilder + Factory" as Parsing {
    class FsmFileParser {
        +Parse(filePath : string) : StateMachine
    }

    class StateMachineBuilder <<Builder>> {
        +WithName(name : string) : StateMachineBuilder
        +AddState(...) : StateMachineBuilder
        +AddTrigger(...) : StateMachineBuilder
        +AddAction(...) : StateMachineBuilder
        +AddTransition(...) : StateMachineBuilder
        +Build() : StateMachine
    }

    class StateFactory <<Factory>> {
        +CreateState(type, id, name) : StateComponent
    }

    enum StateType

    FsmFileParser ..> StateMachineBuilder
    StateMachineBuilder ..> StateFactory
    StateMachineBuilder ..> StateMachine
    StateFactory ..> StateComponent
    StateFactory ..> StateType
}

note top of Parsing
  <b>Builder Pattern</b>
  StateMachineBuilder bouwt de StateMachine
  stap voor stap tijdens het parsen.

  <b>Factory Pattern</b>
  StateFactory maakt het juiste
  StateComponent subtype op basis van StateType.
end note

package "Visitor\nVisitor Pattern" as Visitor {
    interface IFsmVisitor

    class TextRenderVisitor {
        +GetResult() : string
        +Visit(...)
    }

    IFsmVisitor <|.. TextRenderVisitor
    StateComponent ..> IFsmVisitor : accept
    Transition ..> IFsmVisitor : accept
    TextRenderVisitor ..> StateMachine
}

note top of Visitor
  <b>Visitor Pattern</b>
  Rendering/logica staat los van het domeinmodel.
  StateComponent en Transition accepteren een visitor.
end note

package "Validation\nStrategy" as Validation {
    interface IValidationStrategy {
        +Validate(sm : StateMachine) : IEnumerable<ValidationError>
    }

    class ValidationRunner {
        +AddStrategy(s : IValidationStrategy) : ValidationRunner
        +RunAll(sm : StateMachine) : IReadOnlyList<ValidationError>
    }

    class ValidationError
    class DeterminismValidator
    class InitialFinalValidator
    class CompoundTargetValidator

    IValidationStrategy <|.. DeterminismValidator
    IValidationStrategy <|.. InitialFinalValidator
    IValidationStrategy <|.. CompoundTargetValidator
    ValidationRunner "1" o-- "*" IValidationStrategy
    ValidationRunner ..> ValidationError
}

note top of Validation
  <b>Strategy Pattern</b>
  Elke validator is een verwisselbare strategie.
  ValidationRunner voert alle strategieen uit.
end note

package "Presentation" as Presentation {
    class ConsoleUi {
        +DisplayDiagram(sm : StateMachine)
        +DisplayErrors(errors : IReadOnlyList<ValidationError>)
    }

    ConsoleUi ..> TextRenderVisitor
    ConsoleUi ..> StateMachine
    ConsoleUi ..> ValidationError
}

class Program {
    +Main(args : string[])
}

@enduml
